// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura <-> Kusama > Homa redeem unbond works > events 1`] = `
[
  {
    "data": {
      "allowFastMatch": false,
      "liquidAmount": "(redacted)",
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "RequestedRedeem",
    "section": "homa",
  },
]
`;

exports[`Karura <-> Kusama > Homa redeem unbond works > events 2`] = `
[
  {
    "data": {
      "newEraIndex": "(redacted)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
  {
    "data": {
      "eraIndexWhenUnbond": "(redacted)",
      "liquidAmount": "(redacted)",
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "unbondingStakingAmount": "(redacted)",
    },
    "method": "RedeemedByUnbond",
    "section": "homa",
  },
]
`;

exports[`Karura <-> Kusama > Homa redeem unbond works > system events 1`] = `
[
  {
    "data": {
      "amount": "(redacted)",
      "stash": "EMrKvFy7xLgzzdgruXT9oXERt553igEScqgSjoDm3GewPSA",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": [
      "(redacted)",
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`Karura <-> Kusama > Homa stake works > events 1`] = `
[
  {
    "data": {
      "liquidAmountAddedToVoid": "(redacted)",
      "liquidAmountReceived": "(redacted)",
      "minter": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "stakingCurrencyAmount": "(redacted)",
    },
    "method": "Minted",
    "section": "homa",
  },
]
`;

exports[`Karura <-> Kusama > Homa stake works > events 2`] = `
[
  {
    "data": {
      "newEraIndex": "(redacted)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`Karura <-> Kusama > Homa stake works > system events 1`] = `
[
  {
    "data": [
      "(redacted)",
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
  {
    "data": {
      "amount": "(redacted)",
      "stash": "FDVu3RdH5WsE2yTdXN3QMq6v1XVDK8GKjhq5oFjXe8wZYpL",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": [
      "(redacted)",
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`Karura <-> Kusama > Homa stake works > ump 1`] = `
[
  "0x0210000400000000070010a5d4e80a1300000000070010a5d4e8010700e40b54020d0100040001010074d37d762e06c6841a5dad64463a9afe0684f7e45245f6a7296ca613cca74669",
  "0x02140004000000000700e40b540213000000000700e40b54020006010700c817a8043018010100060107002c9980e6140d010004000100411f",
]
`;

exports[`Karura <-> Kusama > Homa unbond withdraw works > events 1`] = `[]`;

exports[`Karura <-> Kusama > Homa unbond withdraw works > system events 1`] = `
[
  {
    "data": [
      "(redacted)",
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`Karura <-> Kusama > Karura transfer assets to Kusama > events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": "(redacted)",
          },
          "id": {
            "Concrete": {
              "interior": "Here",
              "parents": "(redacted)",
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X1": {
            "AccountId32": {
              "id": "(redacted)",
              "network": "Any",
            },
          },
        },
        "parents": "(redacted)",
      },
      "fee": {
        "fun": {
          "Fungible": "(redacted)",
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": "(redacted)",
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Kusama > Karura transfer assets to Kusama > system events 1`] = `
[
  {
    "data": [
      "(redacted)",
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`Karura <-> Kusama > Karura transfer assets to Kusama > ump 1`] = `
[
  "0x0210000400000000070010a5d4e80a1300000000070010a5d4e8000d0100040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
]
`;

exports[`Karura <-> Kusama > Kusama transfer assets to Karura > events 1`] = `
[
  {
    "data": [
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "Attempted",
    "section": "xcmPallet",
  },
]
`;

exports[`Karura <-> Kusama > Kusama transfer assets to Karura > system events 1`] = `
[
  {
    "data": {
      "count": "(redacted)",
    },
    "method": "DownwardMessagesReceived",
    "section": "parachainSystem",
  },
  {
    "data": {
      "messageId": "(redacted)",
      "outcome": {
        "Complete": "(redacted)",
      },
    },
    "method": "ExecutedDownward",
    "section": "dmpQueue",
  },
  {
    "data": {
      "dmqHead": "(redacted)",
      "weightUsed": {
        "proofSize": "(redacted)",
        "refTime": "(redacted)",
      },
    },
    "method": "DownwardMessagesProcessed",
    "section": "parachainSystem",
  },
]
`;
